fix overflow for search

--- a/src/epiviz/browser/browser.css
+++ b/src/epiviz/browser/browser.css
@@ -32,6 +32,7 @@
 
 #leftmenu {
     width: 100%;
+    overflow: auto;
 }
 
 #leftmenu .item .title{
